--- a/MrSyD/template/req.html
+++ b/MrSyD/template/req.html
@@ -75,12 +75,12 @@
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Explore</h2>
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on MoviesAdda</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
+                        <a href="https://t.me/Mod_Moviez_X" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
+                        <a href="https://t.me/Mod_Moviez_X" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
+                        <a href="https://t.me/+RuD7qZl8PFJiNTI1" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on MoviesAdda</a>
+                        <a href="https://t.me/+-VpGTWWWTldhZWNl" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
+                        <a href="https://t.me/+z3L3xXFA7y9hNzI1" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
+                        <a href="https://t.me/+RuD7qZl8PFJiNTI1" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
                     </div>
                     
                 <!-- section -->
@@ -294,7 +294,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_botz">Tech VJ</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/Bot_Cracker">Bᴏᴛ Cʀᴀᴄᴋᴇʀ</a>
                 
                 All right reserved
             </div>   
